--- a/about.html
+++ b/about.html
@@ -155,31 +155,35 @@
 			</div>
 			<div class="certificates">
 	<ul class="certificates__list">
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
-		<li class="certificates__item">
+		<li class="certificates__item" data-zoom="img/certificates/certificate.jpg">
 			<img src="img/certificates/certificate.jpg" alt="">
 		</li>
 	</ul>
+	<div class="modal zoom">
+		<button class="b-close"></button>
+		<div class="zoom__content"></div>
+	</div>
 </div>
 
 			<div class="title">
