--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@
 		<li class="news__item">
 			<div class="block">
 				<div class="block__image">
+					<a href="#" class="block__link"></a>
 					<img src="img/content/goroda-anglii-728x357.jpg" alt="Люцерн"/>
 					<span class="block__date">17.02.2017</span>
 				</div>
@@ -629,6 +630,7 @@
 		<li class="news__item">
 			<div class="block">
 				<div class="block__image">
+					<a href="#" class="block__link"></a>
 					<img src="img/content/goroda-anglii-728x357.jpg" alt="Люцерн"/>
 					<span class="block__date">17.02.2017</span>
 				</div>
@@ -648,6 +650,7 @@
 		<li class="news__item">
 			<div class="block">
 				<div class="block__image">
+					<a href="#" class="block__link"></a>
 					<img src="img/content/goroda-anglii-728x357.jpg" alt="Люцерн"/>
 					<span class="block__date">17.02.2017</span>
 				</div>
