--- a/reviews_write.html
+++ b/reviews_write.html
@@ -75,6 +75,9 @@
 			<div class="drop" id="dropzone">
 				<p class="drop__text"><strong>Выберите файл</strong> или перенесите сюда</p>
 			</div>
+			<div class="drop">
+				<p class="drop__text"><strong>Выберите файл</strong> или перенесите сюда</p>
+			</div>
 		</div>
 		<div class="form__cell">
 			<div class="form__line">
@@ -235,6 +238,8 @@
 		</div>
 	</div>
 </footer>
+
+<a href="#" class="ordertour"><span>Заказать тур</span></a>
 
 <div class="modal modal_order" data-modal="order">
 	<button class="b-close"></button>
