--- a/countries.html
+++ b/countries.html
@@ -523,6 +523,8 @@
 	</div>
 </footer>
 
+<a href="#" class="ordertour"><span>Заказать тур</span></a>
+
 <div class="modal modal_order" data-modal="order">
 	<button class="b-close"></button>
 	<span class="modal__title">Заказать тур</span>
