--- a/country_detail.html
+++ b/country_detail.html
@@ -134,7 +134,7 @@
 			</p>
 		</div>
 		<button class="section__btn btn">Заказать тур</button>
-		<div class="share">
+		<!-- <div class="share">
 	<span>Поделиться:</span>
 	<ul class="social social_share">
 		<li class="social__item">
@@ -158,6 +158,13 @@
 			</a>
 		</li>
 	</ul>
+</div> -->
+
+<div class="share">
+	<span>Поделиться:</span>
+	<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+	<script src="//yastatic.net/share2/share.js"></script>
+	<div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki"></div>
 </div>
 	</section>
 
@@ -166,7 +173,8 @@
 			<div class="title">
 				<h2>Курорты</h2>
 				<p>Взгляните на место отдыха в прямой трансляции</p>
-				<div class="resorts">
+			</div>
+			<div class="resorts">
 	<ul class="resorts__list">
 		<li class="resorts__item">
 			<div class="resort">
@@ -178,9 +186,11 @@
 					<a href="#" class="link link_online">Смотреть онлайн трансляцию</a>
 				</div>
 				<div class="resort__cell resort__cell_content">
-					<p>
-						Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
-					</p>
+					<div class="resort__text">
+						<p>
+							Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
+						</p>
+					</div>
 					<a href="#" class="resort__buy link">Купить</a>
 				</div>
 			</div>
@@ -195,9 +205,11 @@
 					<a href="#" class="link link_online">Смотреть онлайн трансляцию</a>
 				</div>
 				<div class="resort__cell resort__cell_content">
-					<p>
-						Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
-					</p>
+					<div class="resort__text">
+						<p>
+							Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
+						</p>
+					</div>
 					<a href="#" class="resort__buy link">Купить</a>
 				</div>
 			</div>
@@ -212,9 +224,11 @@
 					<a href="#" class="link link_online">Смотреть онлайн трансляцию</a>
 				</div>
 				<div class="resort__cell resort__cell_content">
-					<p>
-						Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
-					</p>
+					<div class="resort__text">
+						<p>
+							Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
+						</p>
+					</div>
 					<a href="#" class="resort__buy link">Купить</a>
 				</div>
 			</div>
@@ -229,16 +243,17 @@
 					<a href="#" class="link link_online">Смотреть онлайн трансляцию</a>
 				</div>
 				<div class="resort__cell resort__cell_content">
-					<p>
-						Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
-					</p>
+					<div class="resort__text">
+						<p>
+							Анта́лья — курортный и портовый город на юге Турции на берегу Средиземного моря, административный центр провинции Анталья. Постоянное население города — чуть более 1 миллиона человек, при этом в летний период число фактически находящихся в городе людей может превышать 2 миллиона из-за активного туристического потока. Рекорд в 12.5 млн человек прошли через аэропорт Антальи в 2014 году.
+						</p>
+					</div>
 					<a href="#" class="resort__buy link">Купить</a>
 				</div>
 			</div>
 		</li>
 	</ul>
 </div>
-			</div>
 		</div>
 	</section>
 
