--- a/reviews.html
+++ b/reviews.html
@@ -398,7 +398,7 @@
 	</ul>
 </div>
 			<button class="section__btn btn btn_review">Рассказать свою историю</button>
-			<div class="share">
+			<!-- <div class="share">
 	<span>Поделиться:</span>
 	<ul class="social social_share">
 		<li class="social__item">
@@ -422,6 +422,13 @@
 			</a>
 		</li>
 	</ul>
+</div> -->
+
+<div class="share">
+	<span>Поделиться:</span>
+	<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+	<script src="//yastatic.net/share2/share.js"></script>
+	<div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki"></div>
 </div>
 			<div class="pagination">
 	<ul class="pagination__pages">
