--- a/countries.html
+++ b/countries.html
@@ -394,7 +394,7 @@
 		</li>
 	</ul>
 </div>
-			<div class="share">
+			<!-- <div class="share">
 	<span>Поделиться:</span>
 	<ul class="social social_share">
 		<li class="social__item">
@@ -418,6 +418,13 @@
 			</a>
 		</li>
 	</ul>
+</div> -->
+
+<div class="share">
+	<span>Поделиться:</span>
+	<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+	<script src="//yastatic.net/share2/share.js"></script>
+	<div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki"></div>
 </div>
 			
 		</div>
