--- a/reviews_detail.html
+++ b/reviews_detail.html
@@ -123,7 +123,7 @@
 		</li>
 	</ul>
 </div>
-			<div class="share share_detail">
+			<!-- <div class="share share_detail">
 	<span>Поделиться:</span>
 	<ul class="social social_share">
 		<li class="social__item">
@@ -147,6 +147,13 @@
 			</a>
 		</li>
 	</ul>
+</div> -->
+
+<div class="share share_detail">
+	<span>Поделиться:</span>
+	<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+	<script src="//yastatic.net/share2/share.js"></script>
+	<div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki"></div>
 </div>
 		</div>
 	</div>
