--- a/about.html
+++ b/about.html
@@ -352,6 +352,10 @@
 	<button class="form__submit btn">Подписаться</button>
 </form>
 </div>
+<div class="modal" data-modal="online">
+	<button class="b-close"></button>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/KZHYwN39t5I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 
 	<script src="js/libs.js"></script>
 	<script src="js/plugins.js"></script>
