--- a/country_detail.html
+++ b/country_detail.html
@@ -183,7 +183,7 @@
 					<div class="resort__image">
 						<img src="img/content/Duden_2.jpg" alt="">
 					</div>
-					<a href="#" class="link link_online">Смотреть онлайн трансляцию</a>
+					<a href="#" class="link link_online" data-modal="online">Смотреть онлайн трансляцию</a>
 				</div>
 				<div class="resort__cell resort__cell_content">
 					<div class="resort__text">
@@ -396,6 +396,10 @@
 	</label>
 	<button class="form__submit btn">Подписаться</button>
 </form>
+</div>
+<div class="modal" data-modal="online">
+	<button class="b-close"></button>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/KZHYwN39t5I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 
 	<script src="js/libs.js"></script>
