team modal + fix

--- a/about.html
+++ b/about.html
@@ -183,6 +183,8 @@
 	<div class="modal zoom">
 		<button class="b-close"></button>
 		<div class="zoom__content"></div>
+		<button class="zoom__ctr zoom__ctr_prev">prev</button>
+		<button class="zoom__ctr zoom__ctr_next">next</button>
 	</div>
 </div>
 
@@ -191,19 +193,27 @@
 			</div>
 			<div class="team">
 	<ul class="team__list">
-		<li class="team__item">
+		<li class="team__item" data-modal="team">
 			<img src="img/team/manager.jpg" alt="">
 			<p>Cynthia Mason</p>
 		</li>
-		<li class="team__item">
+		<li class="team__item" data-modal="team">
 			<img src="img/team/manager.jpg" alt="">
 			<p>Cynthia Mason</p>
 		</li>
-		<li class="team__item">
+		<li class="team__item" data-modal="team">
 			<img src="img/team/manager.jpg" alt="">
 			<p>Cynthia Mason</p>
 		</li>
-		<li class="team__item">
+		<li class="team__item" data-modal="team">
+			<img src="img/team/manager.jpg" alt="">
+			<p>Cynthia Mason</p>
+		</li>
+		<li class="team__item" data-modal="team">
+			<img src="img/team/manager.jpg" alt="">
+			<p>Cynthia Mason</p>
+		</li>
+		<li class="team__item" data-modal="team">
 			<img src="img/team/manager.jpg" alt="">
 			<p>Cynthia Mason</p>
 		</li>
@@ -356,6 +366,31 @@
 	<button class="b-close"></button>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/KZHYwN39t5I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
+	<div class="modal modal_team" data-modal="team">
+	<button class="b-close"></button>
+	<span class="modal__title">Алена Шейкина</span>
+	<div class="modal__content">
+		<em>Молодой, но много знающий специалист</em>
+		<p>
+			<b>Образование:</b> Бакалавриат и магистратура по специальности «Туризм» (АлтГТУ).
+		</p>
+		<p>
+			<b>Опыт работы:</b> 4 года.
+		</p>
+		<p>
+			Алёна организует туры по России и миру. Она знает, где погреться холодной сибирской зимой, и где не обгореть на солнце летом. Алёна подскажет, какие экскурсии посетить на пляжном курорте или в европейском городе, и какие сувениры увезти домой. 
+		</p>
+		<p>
+			<b>О себе от первого лица:</b>
+		</p>
+		<p>
+			<em>
+				«Я влюблена в горы. Особенно в наш родной Алтай. Это непередаваемое чувство, когда ты стоишь где-нибудь на Чуйском тракте, смотришь на заснеженные вершины, вдыхаешь свежий воздух… Помогать клиентам в выборе тура для меня – удовольствие. Я сама люблю путешествовать, открывать новые страны, знакомиться с людьми другой культуры. Поэтому, подбирая тур клиенту, я в душе радуюсь за него: как ему повезло – он поедет в путешествие!». 
+			</em>
+		</p>
+	</div>
+</div>
+	
 
 	<script src="js/libs.js"></script>
 	<script src="js/plugins.js"></script>
