--- a/index.html
+++ b/index.html
@@ -500,22 +500,22 @@
 			<p>В которых стоит побывать</p>
 		</div>
 		<div class="countries">
-	<div class="countries__cell countries__image"></div>
+	<div class="countries__cell countries__image">
+		<img src="http://alttour.dev.letsrock.pro/upload/resize_cache/iblock/3a8/1500_800_1/3a810a654c4c8b52beaca5b5adf2719d.jpg" alt="">
+		<img src="http://alttour.dev.letsrock.pro/upload/iblock/baf/baff722691331203a1a98c9226f66ba4.jpeg" alt="">
+		<img src="http://alttour.dev.letsrock.pro/upload/iblock/c91/c918abff1e56f50a69f931514e23c1b9.jpg" alt="">
+		<img src="http://alttour.dev.letsrock.pro/upload/resize_cache/iblock/c8f/1500_800_1/c8f4accceea7d5ecf40e536762d00b3a.jpg" alt="">
+		<img src="http://alttour.dev.letsrock.pro/upload/iblock/1eb/1ebf1ac8523acd34e0b698887b9ff9d6.jpeg" alt="">
+	</div>
 	<div class="countries__cell">
 		<ul class="countries__list">
-			<li class="countries__item focus" data-img="img/content/marcin-kalinski-259404.jpg">
+			<li class="countries__item focus">
 				<a href="#"></a>
 				<div class="countries__item-wrap">
 					<span class="caption">Тайланд</span>
 					<p>Пхукет удивительный. Несмотря на то, что он считается одним из самых респектабельных курортов Таиланда</p>
 				</div>
 			</li>
-			<li class="countries__item" data-img="img/content/marcin-kalinski-2594042.jpg">
-				<div class="countries__item-wrap">
-					<span class="caption">Тайланд</span>
-					<p>Пхукет удивительный. Несмотря на то, что он считается одним из самых респектабельных курортов Таиланда</p>
-				</div>
-			</li>
 			<li class="countries__item">
 				<div class="countries__item-wrap">
 					<span class="caption">Тайланд</span>
@@ -524,6 +524,13 @@
 			</li>
 			<li class="countries__item">
 				<div class="countries__item-wrap">
+					<span class="caption">Тайланд</span>
+					<p>Пхукет удивительный. Несмотря на то, что он считается одним из самых респектабельных курортов Таиланда</p>
+				</div>
+			</li>
+			<li class="countries__item">
+				<div class="countries__item-wrap">
+					
 					<span class="caption">Тайланд</span>
 					<p>Пхукет удивительный. Несмотря на то, что он считается одним из самых респектабельных курортов Таиланда</p>
 				</div>
